Fix alignement search results with photo

--- a/public/stylesheets/michael-default.css
+++ b/public/stylesheets/michael-default.css
@@ -17,8 +17,12 @@ div.user-photo {
 	float: left;
 	width: 55px;
 }
+div.bam-user-details-icons {
+	float: left;
+}
  div.bam-user-details {
 	float: left;
+	width: 80%;
 }
 #bam-warning-profile-draft {
 	float: left;
